# heal

./: CMakeLists.txt  COPYRIGHT.md  README.md  TECHNICAL_OVERVIEW.md  example_run_transcript.py
.github/workflows/: c-cpp-ci.yml
example_impl/: CMakeLists.txt  axis_modsum_impl.cpp  compute_ops_impl.cpp  contiguous_impl.cpp  core_impl.cpp  device_memory_impl.cpp  device_memory_impl.h  g_decomposition_impl.cpp  memory_virtual_ops_impl.cpp  modmul_impl.cpp  modop_impl.cpp  modsum_impl.cpp  ntt_impl.cpp  permute_impl.cpp  py_bindings.cpp  shape_manipulation_impl.cpp  typing.h  utils.h
include/: axis_modsum.h  compute_ops.h  contiguous.h  device_memory.h  g_decomposition.h  lattica_hw_api.h  memory_virtual_ops.h  modmul.h  modop.h  modsum.h  nested_vector.h  ntt.h  permute.h  shape_manipulation.h
python_execution/: printify.py  py_wrapper.py  runtime.py  serialization.py  setup.py
python_execution/lattica_heal_runtime/: datatypes.py  device_interface.py  printify.py  py_wrapper.py  runtime.py  serialization.py
tests/: CMakeLists.txt  test_axis_modsum.cpp  test_compute_ops.cpp  test_contiguous.cpp  test_decomp_reconstruct.cpp  test_device_memory.cpp  test_g_decomposition.cpp  test_helpers.h  test_memory_ops.cpp  test_modop.cpp  test_modop_v1.cpp  test_modop_v2.cpp  test_modop_v3.cpp  test_noncontiguous.cpp  test_ntt.cpp  test_permute.cpp  test_reshape.cpp  test_shape_manipulation.cpp
